chore(QTDI-2894): add safe S6204 not detected